tests/baselines/reference/ambientClassDeclarationWithExtends.errors.txt
tests/cases/compiler/ambientClassDeclarationExtends_file2.ts(2,5): error TS2741: Property 'bar' is missing in type 'F' but required in type 'E'.


==== tests/cases/compiler/ambientClassDeclarationExtends_singleFile.ts (0 errors) ====
    declare class A { }
    declare class B extends A { }
    
    declare class C {
        public foo;
    }
    namespace D { var x; }
    declare class D extends C { }
    
    var d: C = new D();
    
==== tests/cases/compiler/ambientClassDeclarationExtends_file1.ts (0 errors) ====
    declare class E {
        public bar;
    }
    namespace F { var y; }
    
==== tests/cases/compiler/ambientClassDeclarationExtends_file2.ts (1 errors) ====
    declare class F extends E { }
    var f: E = new F();
        ~
!!! error TS2741: Property 'bar' is missing in type 'F' but required in type 'E'.
!!! related TS2728 tests/cases/compiler/ambientClassDeclarationExtends_file1.ts:2:12: 'bar' is declared here.
    